[package]
name = "grepolis_diff_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
reqwest = { version = "0.11.18", features=["gzip", "deflate", "blocking"] }
axum = "0.6.20"
form_urlencoded = "1.2.1"
rusqlite = { version = "0.30.0", features = ["bundled", "chrono"] }
chrono = "0.4.35"
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }

